Fix Facebook link and update button structure

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ body {
     <a class="btn" href="tel:4076273112">📞 Call 407-627-3112</a>
     <a class="btn secondary" href="mailto:JPPressure@outlook.com">✉ Email</a>
     <a class="btn" href="https://www.instagram.com/JP.PressureWash">📸 Instagram</a>
-    <a class="btn secondary" href="#">📘 Facebook</a>
+    <a class="btn secondary" <a href="https://www.facebook.com/JP Pressure" target="_blank" rel="noopener noreferrer">
+  <img src="facebook-icon.png" alt="Facebook">
+</a>
 
     <div class="footer">Tap buttons to contact instantly</div>
 </div>
